# mani_3-1

./: full_path.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/mani_urdf/share/mani_urdf/: local_setup.sh  package.bash  package.dsv  package.sh
install/mani_urdf/share/mani_urdf/description/mesh/: link2.stl  link4.stl  link5.stl  link6.stl
install/my_vision_msgs/include/my_vision_msgs/my_vision_msgs/msg/: detected_crop.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_introspection_c__visibility_control.h
install/my_vision_msgs/include/my_vision_msgs/my_vision_msgs/msg/detail/: crop_pose__functions.c  crop_pose__functions.h  crop_pose__rosidl_typesupport_fastrtps_cpp.hpp  crop_pose__rosidl_typesupport_introspection_cpp.hpp  crop_pose__struct.h  crop_pose__type_support.cpp  crop_pose__type_support.hpp  detected_crop__builder.hpp  detected_crop__functions.c  detected_crop__functions.h  detected_crop__rosidl_typesupport_introspection_c.h  detected_crop__rosidl_typesupport_introspection_cpp.hpp  detected_crop__struct.h  detected_crop__struct.hpp  detected_crop__type_support.c  detected_crop__type_support.cpp  detected_crop_array__builder.hpp  detected_crop_array__rosidl_typesupport_fastrtps_c.h  detected_crop_array__struct.h  detected_crop_array__type_support.c  (+3 more)
install/my_vision_msgs/share/ament_index/resource_index/rosidl_interfaces/: my_vision_msgs
install/my_vision_msgs/share/my_vision_msgs/: package.dsv  package.sh
install/my_vision_msgs/share/my_vision_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake  export_my_vision_msgs__rosidl_generator_cExport-noconfig.cmake  export_my_vision_msgs__rosidl_generator_cExport.cmake  export_my_vision_msgs__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  my_vision_msgs__rosidl_typesupport_introspection_cExport-noconfig.cmake  my_vision_msgs__rosidl_typesupport_introspection_cppExport-noconfig.cmake
install/sad_pkg/lib/sad_pkg/: forward_node  map_node  obstacle_node  path_node  path_test_node  rrt_node
install/sad_pkg/share/ament_index/resource_index/package_run_dependencies/: sad_pkg
install/sad_pkg/share/ament_index/resource_index/parent_prefix_path/: sad_pkg
install/sad_pkg/share/sad_pkg/: package.bash  package.ps1  package.sh  package.xml
install/sad_pkg/share/sad_pkg/config/: sad_controllers.yaml
install/sad_pkg/share/sad_pkg/config/install/: setup.sh
install/sad_pkg/share/sad_pkg/config/log/: latest_build
install/sad_pkg/share/sad_pkg/launch/: real.launch.py
install/sad_pkg/share/sad_pkg/meshes/: endeffector.stl  link1.stl
install/sad_pkg/share/sad_pkg/urdf/description/: test.xacro
install/serial/lib/serial/: serial_example
install/serial/share/serial/: package.sh
log/: latest_build
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/mani_urdf/share/mani_urdf/: package.ps1  package.sh  package.xml  package.zsh
src/install/mani_urdf/share/mani_urdf/description/: example_include.xacro  example_robot.urdf.xacro
src/install/mani_urdf/share/mani_urdf/launch/: rsp_sim.launch.py
src/install/my_vision_msgs/share/my_vision_msgs/: package.bash  package.ps1  package.sh  package.zsh
src/install/my_vision_msgs/share/my_vision_msgs/cmake/: export_my_vision_msgs__rosidl_generator_cppExport.cmake  export_my_vision_msgs__rosidl_generator_pyExport-noconfig.cmake  export_my_vision_msgs__rosidl_generator_pyExport.cmake  export_my_vision_msgs__rosidl_typesupport_fastrtps_cExport.cmake  export_my_vision_msgs__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_my_vision_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  my_vision_msgs__rosidl_typesupport_cExport.cmake  my_vision_msgs__rosidl_typesupport_cppExport-noconfig.cmake  my_vision_msgs__rosidl_typesupport_cppExport.cmake  my_vision_msgs__rosidl_typesupport_introspection_cExport.cmake  rosidl_cmake-extras.cmake
src/install/sad_pkg/lib/sad_pkg/: forward_node  map_node  obstacle_node  spline_node
src/install/sad_pkg/share/sad_pkg/: local_setup.sh  package.dsv  package.sh  package.xml  package.zsh
src/install/sad_pkg/share/sad_pkg/config/: sad_controllers.yaml
src/install/sad_pkg/share/sad_pkg/config/install/: local_setup.sh  setup.bash  setup.ps1  setup.zsh
src/install/sad_pkg/share/sad_pkg/launch/: rviz.launch.py  sad.launch.py
src/install/sad_pkg/share/sad_pkg/meshes/: link5.stl
src/install/sad_pkg/share/sad_pkg/urdf/description/: test.xacro
src/install/serial/lib/serial/: serial_example
src/install/serial/share/serial/: package.dsv  package.ps1  package.sh
src/install/vision_msgs/share/vision_msgs/: local_setup.sh  package.sh
src/install/vision_msgs/share/vision_msgs/cmake/: export_vision_msgs__rosidl_typesupport_fastrtps_cExport.cmake  vision_msgsConfig.cmake  vision_msgs__rosidl_typesupport_cppExport.cmake  vision_msgs__rosidl_typesupport_introspection_cExport.cmake  vision_msgs__rosidl_typesupport_introspection_cppExport.cmake
src/install/vision_msgs/share/vision_msgs/msg/: CropPose.idl  DetectedCrop.idl
src/log/: latest_build
src/mani_urdf/: CMakeLists.txt
src/mani_urdf/config/: gazebo_controll.yaml
src/mani_urdf/description/: example_gazebo.xacro
src/mani_urdf/launch/: rsp.launch.py
src/my_vision_msgs/: CMakeLists.txt
src/sad_pkg/: CMakeLists.txt  package.xml
src/sad_pkg/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/sad_pkg/install/sad_pkg/share/sad_pkg/: package.sh
src/sad_pkg/install/sad_pkg/share/sad_pkg/launch/: sad.launch.py
src/sad_pkg/install/sad_pkg/share/sad_pkg/meshes/: link7.stl
src/sad_pkg/install/sad_pkg/share/sad_pkg/urdf/description/: all.xacro  test.xacro
src/sad_pkg/launch/: all.launch.py
src/sad_pkg/log/: latest_build
src/sad_pkg/src/: Inverse_node.cpp  forward_node.cpp  mani_test_node.cpp  map_node.cpp  motor_node.cpp  obstacle_node.cpp  path_node.cpp  path_test_node.cpp  real_inverse_node.cpp  rrt_node.cpp  spline_node.cpp  test_node.cpp
src/sad_pkg/urdf/description/: sad.xacro  test.xacro
(+53 files in other folders)
