<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" 
             schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sad_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="fhmpsy@gmail.com">ga</maintainer>
  <license>TODO: License declaration</license>

  <!-- ================================================================ -->
  <!-- 1) Build tool 의존성                                            -->
  <!-- ================================================================ -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ================================================================ -->
  <!-- 2) Build 시점 의존성                                           -->
  <!--    (컴파일 타임에 헤더가 필요하거나 메시지 타입이 필요한 경우)   -->
  <!-- ================================================================ -->
  <build_depend>rclcpp_components</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>

  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>launch</build_depend>
  <build_depend>launch_ros</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>ros2_control</build_depend>
  <build_depend>ros2_controllers</build_depend>
  <build_depend>gazebo_ros2_control</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>my_vision_msgs</build_depend>
  <build_depend>rosidl_default_runtime</build_depend>

  <!-- ================================================================ -->
  <!-- 3) 런타임(실행 시) 의존성                                      -->
  <!--    (실행할 때 반드시 설치되어 있어야 하는 패키지)               -->
  <!-- ================================================================ -->
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_action</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>

  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>my_vision_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- ================================================================ -->
  <!-- 4) 테스트용 의존성                                               -->
  <!-- ================================================================ -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/.." />
  </export>
</package>
