<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sad_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="fhmpsy@gmail.com">ga</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>gazebo_ros</depend>
  <depend>robot_state_publisher</depend>
  <depend>geometry_msgs</depend>
  <depend>ament_index_python</depend>
  <depend>trajectory_msgs</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>gazebo_ros2_control</depend>
  <depend>controller_manager</depend>
  <depend>std_msgs</depend>
  <depend>vision_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/.." /> 
  </export>

</package>
